# task-management

./: .gitignore  Dockerfile  README.md  docker-compose.yml
.github/workflows/: build.yml
backend/: .gitignore  Dockerfile.test  main.py  pyproject.toml  run_tests.py
backend/api/core/: db_conection.py  decorators.py  dependencies.py  exceptions.py  response_model.py  security.py  settings.py
backend/api/models/: __init__.py  base.py  task.py  user.py
backend/api/repositories/: conta.py  task.py  usuario.py
backend/api/routes/: __init__.py  auth.py  task.py  usuario.py
backend/api/schemas/: conta.py  task.py  usuario.py
backend/api/services/: conta.py  task.py  usuario.py
backend/migrations/: env.py
backend/migrations/versions/: 178250264463_.py  61dbd3e08824_initial_migration.py  cc5a8e43f046_add_task_table.py
backend/tests/: README.md  conftest.py
backend/tests/factories/: __init__.py  task_factory.py  user_factory.py
backend/tests/integration/: test_auth_routes.py  test_task_routes.py
backend/tests/unit/: test_auth.py  test_task_service.py
frontend/: Dockerfile  middleware.ts  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/app/tasks/: page.tsx
frontend/components/: auth-loading.tsx  footer.tsx  header.tsx  kanban-board.tsx  kanban-column.tsx  kanban-task-card.tsx  mode-toggle.tsx  protected-route.tsx  task-card.tsx  task-filters.tsx  task-form.tsx  task-list.tsx  toaster.tsx
frontend/components/ui/: toast.tsx
frontend/contexts/: auth-context.tsx
frontend/examples/: task-integration-example.tsx
frontend/hooks/: use-toast.ts  useAuthGuard.ts
frontend/lib/: api-config.ts  mock-data.ts  types.ts  validations.ts
frontend/lib/api/: api-errors.ts  auth-api.ts  interceptors.ts
(+7 files in other folders)
