[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Pedro <92474347+Pedroffda@users.noreply.github.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "^2.10.1"
pydantic = "^2.11.7"
fastapi = {extras = ["standard"], version = "^0.116.1"}
sqlalchemy = "^2.0.43"
passlib = "^1.7.4"
pytz = "^2025.2"
pyjwt = "^2.10.1"
alembic = "^1.16.4"
psycopg2-binary = "^2.9.10"
uvicorn = "^0.35.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
httpx = "^0.28.0"
pytest-cov = "^5.0.0"
factory-boy = "^3.3.0"
faker = "^25.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=api",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]
